--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  audioplayers: ^0.16.2
 
 dev_dependencies:
   flutter_test:
@@ -21,5 +22,11 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/note1.wav
+    - assets/note2.wav
+    - assets/note3.wav
+    - assets/note4.wav
+    - assets/note5.wav
+    - assets/note6.wav
+    - assets/note7.wav
 
